--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       font-style: normal;
       border-radius: 5px;
       width: 100%;
-      border: 1px solid ##66A1FF;
+      border: 1px solid #66A1FF;
       border-width: 1px 1px 3px;
       box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
       margin-bottom: 10px;
@@ -150,8 +150,10 @@
 
     .activo {
 
-      background: red
+      background: #4bc970;
+      border: 1px solid #4bc970;
     }
+
   </style>
 
   <script>
