--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
       display: inline-block;
     }
 
+    div.circulitos {
+      width: 18%;
+      text-align: center;
+      display: inline-block;
+    }
+
     form {
       max-width: 98%;
       margin: 10px auto;
@@ -234,48 +240,26 @@
         </div>
       </div>
 
-      <!-- numeros de radios para satisfaccion con luminosidad -->
-    <!--   <div>
-        <div class="circulo-eleccion">
-          <label for="luminosity-satisfaction-1" class="light"></label>
-        </div>
-
-        <div class="circulo-eleccion">
-          <label for="luminosity-satisfaction-2" class="light"></label>
-        </div>
-
-        <div class="circulo-eleccion">
-          <label for="luminosity-satisfaction-3" class="light"></label>
-        </div>
-
-        <div class="circulo-eleccion">
-          <label for="luminosity-satisfaction-4" class="light"></label>
-        </div>
-
-        <div class="circulo-eleccion">
-          <label for="luminosity-satisfaction-5" class="light"></label>
-        </div>
-      </div> -->
 
       <!-- radios para satisfaccion con Luminosidad-->
       <div>
-        <div class="circulo-eleccion">
+        <div class="circulitos">
           <input id="luminosity-satisfaction-1" type="radio" value="1" name="luminosity-feedback" />
         </div>
 
-        <div class="circulo-eleccion">
+        <div class="circulitos">
           <input id="luminosity-satisfaction-2" type="radio" value="2" name="luminosity-feedback" />
         </div>
 
-        <div class="circulo-eleccion">
+        <div class="circulitos">
           <input id="luminosity-satisfaction-3" type="radio" value="3" name="luminosity-feedback" />
         </div>
 
-        <div class="circulo-eleccion">
+        <div class="circulitos">
           <input id="luminosity-satisfaction-4" type="radio" value="4" name="luminosity-feedback" />
         </div>
 
-        <div class="circulo-eleccion">
+        <div class="circulitos">
           <input id="luminosity-satisfaction-5" type="radio" value="5" name="luminosity-feedback" />
         </div>
       </div>
@@ -327,23 +311,23 @@
       </div>
       <!-- radios para satisfaccion con temperatura-->
       <div>
-        <div class="circulo-eleccion">
+        <div class="circulitos">
           <input id="temperature-satisfaction-1" type="radio" value="1" name="temperature-feedback" />
         </div>
 
-        <div class="circulo-eleccion">
+        <div class="circulitos">
           <input id="temperature-satisfaction-2" type="radio" value="2" name="temperature-feedback" />
         </div>
 
-        <div class="circulo-eleccion">
+        <div class="circulitos">
           <input id="temperature-satisfaction-3" type="radio" value="3" name="temperature-feedback" />
         </div>
 
-        <div class="circulo-eleccion">
+        <div class="circulitos">
           <input id="temperature-satisfaction-4" type="radio" value="4" name="temperature-feedback" />
         </div>
 
-        <div class="circulo-eleccion">
+        <div class="circulitos">
           <input id="temperature-satisfaction-5" type="radio" value="5" name="temperature-feedback" />
         </div>
       </div>
