--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
       margin-bottom: 10px;
     }
 
-    input[type="radio"]{
-    margin: 5px 0px 0px 0;
-  }
+    /*-input[type="radio"],{
+    margin: 0 4px 8px 0;
+  } */
 
     input[type="checkbox"] {
       margin: 0 4px 8px 0;
