--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
     <fieldset>
 
-
+        <p>Necesitamos de tu feedback para poder mejoras los ambientes, te tomara unos segundos, gracias</p>
         <p><span class="number">1</span> ¿Te gusta la iluminación que tienes en este momento?</p>
 
       <!-- Luminosidad-->
